maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: ')' expected but ';' found.
setIndication(x;y,0)
               ^JediEscaper:15: error: ';' expected but ',' found.
setIndication(x;y,0)
                 ^